<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#14E4FF"
    tools:context=".video">

    <VideoView
        android:id="@+id/visualiceVideo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/playV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_below="@id/visualiceVideo"
        android:layout_centerHorizontal="true"
        android:text="@string/btnPlay"
        />

    <Button
        android:id="@+id/pauseV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="3dp"
        android:layout_below="@id/playV"
        android:text="@string/btnPause"
        />

    <Button
        android:id="@+id/continueV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="3dp"
        android:layout_below="@id/pauseV"
        android:text="@string/btnContinue"
        />

    <Button
        android:id="@+id/stopV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="3dp"
        android:layout_below="@id/continueV"
        android:text="@string/btnStop"
        />

</RelativeLayout>