<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#18E5FF"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleApp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-condensed"
        android:textSize="25dp"
        android:textColor="#000000"
        />

    <SurfaceView
        android:id="@+id/videoplay"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/title"/>

    <Button
        android:id="@+id/bplay_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/videoplay"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:text="@string/btnVideo"/>

    <Button
        android:id="@+id/bplay_audio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bplay_video"
        android:layout_centerHorizontal="true"
        android:text="@string/btnAudio" />


    <Button
        android:id="@+id/b_ayuda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bplay_audio"
        android:layout_centerHorizontal="true"
        android:text="@string/btnHelp"/>

</RelativeLayout>