<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#14E4FF"
    tools:context=".audio">

    <Button
        android:id="@+id/btplay_audio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_centerHorizontal="true"
        android:text="@string/btnAudio" />

    <Button
        android:id="@+id/bpause_audio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btplay_audio"
        android:layout_centerHorizontal="true"
        android:text="@string/btnPauseA" />

    <Button
        android:id="@+id/bstop_audio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bpause_audio"
        android:layout_centerHorizontal="true"
        android:text="@string/btnStopA" />

</RelativeLayout>